remove starter template details

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Letter Game",
-  "name": "Pre-school Letter Game",
+  "short_name": "Phonics Game",
+  "name": "Toddler Phonics Letter Game",
   "icons": [
     {
       "src": "favicon.png",
