--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,9 +4,9 @@
   "icons": [
     {
       "src": "favicon.png",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }    
+      "sizes": "32x32",
+      "type": "image/png"
+    }
   ],
   "start_url": ".",
   "display": "standalone",
